# visual-assets-generator

./: .gitignore  BUILDING.md  MACOS.md  README.md  appxmanifest.xml
.github/ISSUE_TEMPLATE/: bug-report.md  feature-request.md
src/: index.html
src-tauri/: Cargo.toml  Entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/fonts/: fonts.css
website/: README.md  index.html
website/src/: index.html
