[package]
name = "visual-assets-generator"
version = "1.0.0"
description = "Generate every platform app icon and store asset from a single image"
authors = ["EERIE"]
edition = "2021"

[lib]
# The `_lib` suffix avoids a name clash with the binary on Windows.
name = "visual_assets_generator_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
base64 = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
